--- a/front/src/css/02-Layout/_nav.scss
+++ b/front/src/css/02-Layout/_nav.scss
@@ -6,6 +6,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 2;
     height: 60px;
     @media (max-width: 680px) {
         background-color: transparent;
@@ -85,8 +86,14 @@
                 justify-content: space-around;
                 transition: all 550ms ease-in-out;
             }
+            .active {
+                a {
+                    color: var(--red);
+                    font-family: var(--bold);
+                }
+            }
             li {
-                margin-right: 30px;
+                margin-right: 50px;
                 a {
                     font-family: var(--ttMedium);
                     text-transform: uppercase;
@@ -95,6 +102,7 @@
                         color: var(--red);
                     }
                 }
+                
             }
         }
         &--icon {
@@ -109,7 +117,7 @@
             }
             a {
                 img {
-                    filter: brightness(0);
+                    filter: brightness(1);
                     transition: filter 200ms ease-in-out;
                     @media (max-width: 680px) {
                         filter: brightness(1);
