--- a/front/src/css/03-Pages/farm/_secondaryMenu.scss
+++ b/front/src/css/03-Pages/farm/_secondaryMenu.scss
@@ -1,5 +1,8 @@
 #farm {
     section.secondaryMenu {
+        @media (max-width: 800px) {
+            display: none;
+        }
         .arriba {
             display: flex;
             .iz {
