--- a/front/src/css/styles.scss
+++ b/front/src/css/styles.scss
@@ -31,3 +31,4 @@
 @use '03-Pages/farm/heroFarm';
 @use '03-Pages/farm/mid';
 @use '03-Pages/farm/secondaryMenu';
+@use '03-Pages/farm/secondary-movil';
