--- a/front/src/css/03-Pages/masters/_sliderMasters.scss
+++ b/front/src/css/03-Pages/masters/_sliderMasters.scss
@@ -64,6 +64,11 @@
             .image {
                 width: 50%;
                 padding: 50px;
+                img {
+                    width: 100%;
+                    height: 600px;
+                    object-fit: cover;
+                }
                 @media (max-width: 750px) {
                     width: 100%;
                     padding: 20px;
